updated order model
